# jetpl

./: README.md  meson.build
include/: jetpl-lexer.h  jetpl-object.h  jetpl-status.h  jetpl-string.h  jetpl-token.h  jetpl.h  meson.build
src/: jetpl-lexer.c  jetpl-object.c  jetpl-string.c  jetpl-string.h  jetpl-token.c  jetpl.c  meson.build
tests/: meson.build  string-test.c  strip-test.c  typical-test.c  typical.c  typical.h  typical2-test.c
