jetpl = shared_library('jetpl-1.0',
                       'jetpl-string.c',
                       'jetpl-object.c',
                       'jetpl-token.c',
                       'jetpl-lexer.c',
                       'jetpl.c',
                       include_directories : incdir,
                       install : true)
